crates/test-files/fixtures/compile_errors/invalid_generic_string.fe
contract Foo:
  val: String<foo>
  foo: String<10, 20>
